RESOLVED FIXED118572
Plugins that don't support snapshotting should not all autostart.
https://bugs.webkit.org/show_bug.cgi?id=118572
Summary Plugins that don't support snapshotting should not all autostart.
Roger Fong
Reported 2013-07-11 11:09:48 PDT
Currently plugins that don't support snapshotting all autostart (quicktime, silverlight, etc). This should not be the case.
Attachments
Patch (10.58 KB, patch)
2013-07-11 11:12 PDT, Roger Fong
dino: review+
Roger Fong
Comment 1 2013-07-11 11:12:37 PDT
Dean Jackson
Comment 2 2013-07-11 16:22:19 PDT
Comment on attachment 206477 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=206477&action=review > Source/WebCore/html/HTMLPlugInImageElement.cpp:387 > + argList.append(JSC::jsBoolean(!m_snapshotImage)); I think we should put a comment here to explain that this parameter determines if the overlay should be always visible, which we want when we don't have a good snapshot.
Roger Fong
Comment 3 2013-07-11 16:55:01 PDT
Roger Fong
Comment 4 2013-07-11 17:01:53 PDT
Note You need to log in before you can comment on or make changes to this bug.